# JKCS.py-Manual

./: .readthedocs.yaml  lumache.py  pyproject.toml
docs/: README.rst  env.yml  requirements.txt
docs/source/: BasicExample.rst  Citation.rst  ClusterSubmission.rst  ClusterSubmission.rtf  Cluster_submission.rst  DatabaseManipulation.rst  Databases.rst  Evaluate.rst  HowToQML.rst  HowToSchNetPack.rst  Inputfile.rst  Installation.rst  Introduction.rst  JKCS.rst  JKCS0_copy.rst  JKCS1_prepare.rst  JKCS1prepare.rtf  JKCS2_explore.rst  JKCS3_run.rst  JKCS4_collect.rst  JKCS5_filter.rst  JKCSSetupAndInstallation.rst  JKML.rst  JKQC.rst  JKQCSetupAndInstallation.rst  Pickle  Pickle.rst  SetupAndInstallation.rst  api.rst  conf.py  contents.rst  index.rst  usage.rst
docs/source/JK/: Citation.rst  ClusterSubmission.rst
docs/source/JKCS/: BasicExample.rst  JKCS0_copy.rst  JKCS1_prepare.rst  JKCS5_filter.rst
docs/source/JKMD/: Equilibration.rst  HowToJKMD.rst  Pulling.rst  UmbrellaSampling.rst
docs/source/JKML/: HowToSchNetPack.rst
docs/source/JKQC/: DatabaseManipulation.rst  JKQCSetupAndInstallation.rst
docs/source/JKTS/: JKTS.rst
docs/source/bib/: jkcs.bib
