[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "JKCS"
authors = [{name = "Kubecka", email = "akcebukbukaj@gmail.com"}]
dynamic = ["version", "description"]

docs = [
    "sphinx>=5.1.1",  # c.f. https://github.com/scikit-hep/pyhf/pull/1926
    "sphinxcontrib-bibtex~=2.1",
]

develop = [
    "JKCS[docs]",
]
